--- a/style.css
+++ b/style.css
@@ -137,11 +137,11 @@ a {
 }
 
 .curling {
-  background-image: url(Images/curling.jpg);
+  background-image: url(Images/Curling.jpg);
 }
 
 .figure-skating {
-  background-image: url(Images/figure-skating.jpg)
+  background-image: url(Images/Figure-Skating.jpg)
 }
 
 .hockey {
@@ -161,7 +161,7 @@ a {
 }
 
 .biathlon {
-  background-image: url(Images/biathlon.jpg);
+  background-image: url(Images/Biathlon.jpg);
 }
 
 .card-name {
